fix text size in movie modals on smaller screens

--- a/public/sandpit6.css
+++ b/public/sandpit6.css
@@ -179,3 +179,9 @@ width:30%}
 	font-weight:800;
 	font-size: 2em;
 }
+
+@media only screen and (max-width: 900px) {
+  .bolderSandpit {
+    font-size: 0.8em ;
+  }
+}
